# battleship-tui

./: DECISIONS.md  DOGFOOD.md  Makefile  README.md  battleship.py  pyproject.toml
battleship_tui/: __init__.py  agent_api.py  app.py  engine.py  screens.py  sounds.py  tiles.py  tui.tcss
screenshots/: README.md  endscreen.tcell  gameplay.tcell
tests/: api_qa.py  perf.py  playtest.py  qa.py  sound_test.py
